FlightPath 6.x Changelog
========================

2022-07-04
  Updated some display code in student_search.
  
  Altered checkbox for inactive students code in student_search submit function.
  

2022-06-30
  Small adjustment in engagments-- made email tracking token sha512, and based on microtime + extra randomness to try to ensure uniqueness.
   

2022-06-27
  Made it so the system only tries to trim the watchdog once every 7 days, rather than on every cron run.
  
  Added extra wording to some watchdog entries for clarity.
  

2022-06-23
  Fixed small bug where CSS class was not being specified on left sidebar items.
  
  During the "duplicate entire catalog year" function, there was a die() statement if a group couldn't be found.  Changed
  that to simply display a message.
  

2022-06-17
  Added new function to DatabaseHandler, where we can request a new advising_session_token, and be guaranteed that it does not already exist.  Updated FlightPath class
  to make use of it. 
  

2022-06-15
  Modified user module to make it easier to filter for users.  Made it function more like FP 5, where setting a filter actually shows you
  all values under that filter, and you don't have to search by letter as well.  For students, this is true, except we do not reset values
  for "is_active" when searching by letter or other filter values.
  

2022-06-07
  Fixed bug when editing user attributes from the users screen, where if no "fields" index is set, we weren't correctly creating a default
  field called "value" that's a textfield.
  

2022-06-01
  Small modifications to help eliminate bugs in menu items showing in a menu block.
  

2022-05-29
  Adjusted hook.api documentation.
  
  Altered alerts to allow for targetting specific faculty/staff by CWID, and NOT sending the alert to the student's advisor.  Also, if the student_id
  field is left blank, it will show as "N/A" on the Alerts page.  This is useful if you have alerts, sent to specific users, which do not