@@ -382,124 +382,7 @@ function student_priority_get_calculations_for_student($student_cwid, $bool_save
 
 
 
-/**
- * Implements hook_define_calculation_tests
- * TODO: accept an array so we can alter.  Then, we are just going to add to array.
- */
-function student_priority_define_calculation_tests(&$arr) {
-  
-  
-  
-  $arr['student_priority__does_student_work_on_campus'] = array(  
-    'title' => 'Does the student work on campus?',
-    'description' => 'If the student has a campus job, they are generally more engaged
-                      in campus life and their own success.',        
-    'result_scores' => array(  // Based on the returned 'result' value, what "score" should we use?
-      'Y' => 0,
-      'N' => 0.5
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 100,   // lighter weights float to the top (get evaluated first)
-  );
-   
-
-  $arr['student_priority__is_student_gpa_above_250'] = array(  
-    'title' => "Is the student's GPA above 2.50?",
-    'result_scores' => array(
-      'Y' => 0,
-      'N' => 0.9
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 110,
-  );
-
-  $arr['student_priority__does_student_have_more_than_2_d_or_f'] = array(  
-    'title' => "Does the student have more than 2 D's or F's?",
-    'result_scores' => array(
-      'Y' => 1,
-      'N' => 0,
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 130,
-  );
-
-
-
-  $arr['student_priority__does_student_have_more_than_2_w'] = array(  
-    'title' => "Does the student have more than 2 W's?",
-    'result_scores' => array(
-      'Y' => 0.8,
-      'N' => 0,
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 140,
-  );
-
-
-
-  $arr['student_priority__did_student_score_below_b_on_engl_1001'] = array(  
-    'title' => "Did the student score below a 'B' in ENGL 1001?",
-    'result_scores' => array(
-      'Y' => 0.8,
-      'N' => 0,      
-      'N/A' => 'SKIP',
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 150,
-  );
-
-
-
-/*
-  $rtn['student_priority__how_many_times_has_student_changed_majors'] = array(  
-    'title' => "How many times has the student changed majors?",
-    'result_scores' => array(
-      '0' => 0,
-      '1' => 0.3,
-      '2+' => 0.6,      
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 160,
-  );
-
-
-
-  $rtn['student_priority__did_the_student_attend_underperforming_high_school'] = array(  
-    'title' => "Did the student attend an underperforming high school?",
-    'result_scores' => array(
-      'Y' => 0.4,
-      'N' => 0,            
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 170,
-  );
-*/
-
-  $arr['student_priority__does_student_have_federal_financial_aid'] = array(  
-    'title' => "Does the student have federal financial aid?",
-    'result_scores' => array(
-      'Y' => 0,
-      'N' => 0.2,            
-    ),    
-    'file' => array('student_priority', 'student_priority.calculations.inc'),        
-    'group' => 'FlightPath Core',  // groups multiple tests together this way    
-    'weight' => 105,
-  );
-
-
-  
-  
-
-  
-} // student_priority_define_calculation_tests()
-
+// See the *api.php file for an example of how to create tests.
 
 
 
